--- a/app/src/main/res/layout/fragment_send_email_recovery.xml
+++ b/app/src/main/res/layout/fragment_send_email_recovery.xml
@@ -82,10 +82,9 @@
                     <EditText
                         android:id="@+id/userEmail"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:background="@color/transparent"
                         android:gravity="top|start"
-                        android:hint="Email"
                         android:inputType="textEmailAddress"
                         android:lines="1"
                         android:maxLines="1"
@@ -131,7 +130,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="10dp"
-                    android:src="@drawable/ic_arrow_forward_white"
+                    app:srcCompat="@drawable/ic_arrow_forward_white"
                     app:layout_constraintBottom_toBottomOf="@+id/btnSendRecoveryNumber"
                     app:layout_constraintEnd_toEndOf="@+id/btnSendRecoveryNumber"
                     app:layout_constraintStart_toStartOf="@+id/btnSendRecoveryNumber"
