--- a/app/src/main/res/layout/activity_recovery_password.xml
+++ b/app/src/main/res/layout/activity_recovery_password.xml
@@ -12,6 +12,10 @@
             type="boolean" />
 
         <variable
+            name="isCodeError"
+            type="boolean" />
+
+        <variable
             name="userEmail"
             type="String" />
     </data>
@@ -19,62 +23,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/recovery_password_root"
+        android:background="@color/recuperation_background"
         tools:context=".views.activities.RecoveryPasswordActivity">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelineTop"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.17" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelineBottom"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.90" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ingrese el codigo de 4 digitos"
-            android:textSize="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
-
-
-        <TextView
-            android:id="@+id/contentText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:gravity="center_horizontal"
-            android:text="@{`El codigo de recuperacion fue enviado al correo `+ userEmail +`, por favor ingreselo a continuacion.`}"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-
-        <!--        <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guideline"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.22" />-->
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guidelineSecond"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.45" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
@@ -91,13 +41,64 @@
             app:layout_constraintGuide_percent="0.90" />
 
 
-        <View
-            android:id="@+id/codeSeparatorGuide"
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineTop"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contentText" />
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineBottom"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.90" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/startCodeGuideline"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.3" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/endCodeGuideline"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.45" />
+
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Código de verificación"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/contentText"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            android:gravity="start"
+            android:text="@{`El codigo de recuperacion fue enviado al correo `+ userEmail +`, por favor ingreselo a continuacion.`}"
+            android:textAlignment="textStart"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/startCodeGuideline"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
 
         <EditText
             android:id="@+id/recoveryFirstDigit"
@@ -105,7 +106,6 @@
             android:layout_height="0dp"
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
-
             android:digits="0123456789"
             android:enabled="@{isRecoveryCorrect ? false:true}"
             android:gravity="center_horizontal|center_vertical"
@@ -115,19 +115,17 @@
             android:maxLines="1"
             android:textAlignment="center"
             android:textSize="20sp"
-
             app:flow_verticalAlign="center"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
+            app:layout_constraintBottom_toTopOf="@+id/endCodeGuideline"
             app:layout_constraintEnd_toStartOf="@+id/recoverySecondDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
+            app:layout_constraintTop_toBottomOf="@+id/startCodeGuideline" />
 
         <EditText
             android:id="@+id/recoverySecondDigit"
             android:layout_width="0dp"
             android:layout_height="0dp"
-
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
@@ -136,22 +134,19 @@
             android:imeOptions="actionGo"
             android:inputType="number"
             android:maxLength="1"
-
-
             android:maxLines="1"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
+            app:layout_constraintBottom_toTopOf="@+id/endCodeGuideline"
             app:layout_constraintEnd_toStartOf="@+id/recoveryThirdDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoveryFirstDigit"
-            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
+            app:layout_constraintTop_toBottomOf="@+id/startCodeGuideline" />
 
         <EditText
             android:id="@+id/recoveryThirdDigit"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="15dp"
-
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
             android:enabled="@{isRecoveryCorrect ? false:true}"
@@ -160,21 +155,18 @@
             android:inputType="number"
             android:maxLength="1"
             android:maxLines="1"
-
-
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
+            app:layout_constraintBottom_toTopOf="@+id/endCodeGuideline"
             app:layout_constraintEnd_toStartOf="@+id/recoveryFourthDigit"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoverySecondDigit"
-            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
+            app:layout_constraintTop_toBottomOf="@+id/startCodeGuideline" />
 
         <EditText
             android:id="@+id/recoveryFourthDigit"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="15dp"
-
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
             android:enabled="@{isRecoveryCorrect ? false:true}"
@@ -183,26 +175,47 @@
             android:inputType="number"
             android:maxLength="1"
             android:maxLines="1"
-
-
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/guidelineSecond"
+            app:layout_constraintBottom_toTopOf="@+id/endCodeGuideline"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/recoveryThirdDigit"
-            app:layout_constraintTop_toTopOf="@+id/codeSeparatorGuide" />
+            app:layout_constraintTop_toBottomOf="@+id/startCodeGuideline" />
 
+
+        <TextView
+            android:id="@+id/codeInputError"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text="Codigo erroneo, intentelo nuevamente"
+            android:textAlignment="center"
+            android:textColor="@color/error"
+            android:textSize="18sp"
+            android:visibility="@{isCodeError ? View.VISIBLE:View.GONE}"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="@+id/endCodeGuideline" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lockAnimation"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="@+id/endCodeGuideline" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="0dp"
             android:visibility="@{isRecoveryCorrect ? View.VISIBLE:View.GONE}"
             app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toTopOf="@+id/guidelineSecond">
+            app:layout_constraintTop_toTopOf="@+id/endCodeGuideline">
 
             <TextView
                 android:id="@+id/textView12"
@@ -211,9 +224,8 @@
                 android:gravity="center_horizontal"
                 android:text="Nueva Contraseña"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -226,9 +238,8 @@
                 android:gravity="center_horizontal"
                 android:text="Ingrese su nueva contraseña"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -295,7 +306,7 @@
                 android:paddingLeft="10dp"
                 android:paddingEnd="15dp"
                 android:text="Confirmar"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/newResetConfirmPassword_inputLayout" />
