--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="recovery_card">#ffffff</color>
     <color name="success">#4BB543</color>
     <color name="error">#ff0033</color>
+    <color name="recuperation_background">#2d343c</color>
 
 
     <color name="purple_200">#FFBB86FC</color>
