--- a/app/src/main/res/drawable/custom_new_password_box.xml
+++ b/app/src/main/res/drawable/custom_new_password_box.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="5dp" />
-            <stroke android:width="2dp" android:color="@color/gray" />
+            <stroke android:width="2dp" android:color="@color/black" />
         </shape>
     </item>
 
@@ -14,7 +14,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="5dp" />
-            <stroke android:width="2dp" android:color="@color/black" />
+            <stroke android:width="2dp" android:color="@color/secondary_second" />
         </shape>
     </item>
 
