--- a/app/src/main/res/layout/activity_recovery_password.xml
+++ b/app/src/main/res/layout/activity_recovery_password.xml
@@ -12,6 +12,10 @@
             type="boolean" />
 
         <variable
+            name="showSuccessFields"
+            type="boolean" />
+
+        <variable
             name="isCodeError"
             type="boolean" />
 
@@ -107,7 +111,7 @@
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:enabled="@{showSuccessFields ? false:true}"
             android:gravity="center_horizontal|center_vertical"
             android:imeOptions="actionGo"
             android:inputType="number"
@@ -129,7 +133,7 @@
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:enabled="@{showSuccessFields ? false:true}"
             android:gravity="center_horizontal|center_vertical"
             android:imeOptions="actionGo"
             android:inputType="number"
@@ -149,7 +153,7 @@
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:enabled="@{showSuccessFields ? false:true}"
             android:gravity="center_horizontal|center_vertical"
             android:imeOptions="actionGo"
             android:inputType="number"
@@ -169,7 +173,7 @@
             android:layout_margin="15dp"
             android:background="@drawable/custom_recovery_box"
             android:digits="0123456789"
-            android:enabled="@{isRecoveryCorrect ? false:true}"
+            android:enabled="@{showSuccessFields ? false:true}"
             android:gravity="center_horizontal|center_vertical"
             android:imeOptions="actionDone"
             android:inputType="number"
