--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -4,13 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <import type="android.view.View" />
-
-        <variable
-            name="isNewUser"
-            type="boolean" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,14 +18,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!--        <FrameLayout
-                    android:id="@+id/userFrameContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>-->
-
 
         <fragment
             android:id="@+id/nav_users_container"
@@ -39,65 +25,21 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationUsers"
+            app:layout_constraintBottom_toTopOf="@+id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/topView"
-            app:navGraph="@navigation/nav_graph_users"
+            app:navGraph="@navigation/nav_graph"
             tools:ignore="FragmentTagUsage" />
 
 
-        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
-            android:id="@+id/bottomNavigationUsers"
+        <np.com.susanthapa.curved_bottom_navigation.CurvedBottomNavigationView
+            android:id="@+id/nav_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:mbn_backgroundBottomColor="@color/primary_second"
-            app:mbn_defaultIconColor="#fff"
-            app:mbn_selectedIconColor="@color/secondary"
-            app:mbn_shadowColor="@color/secondary_second" />
-
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
-    <!--<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <FrameLayout
-            android:id="@+id/userFrameContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottom_bar"
-            style="@style/Widget.MaterialComponents.BottomAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/primary_second"
-            android:visibility="@{isNewUser ? View.VISIBLE:View.GONE}"
-            app:fabCradleRoundedCornerRadius="5dp" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addUserBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/secondary_second"
-            android:src="@drawable/ic_baseline_add_24"
-            android:visibility="@{isNewUser ? View.VISIBLE:View.GONE}"
-            app:borderWidth="0dp"
-            app:fabSize="auto"
-            app:layout_anchor="@id/bottom_bar" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
-
-
-
-
-
-
