--- a/app/src/main/res/layout/top_view.xml
+++ b/app/src/main/res/layout/top_view.xml
@@ -10,20 +10,20 @@
         android:layout_height="50dp"
         android:src="@drawable/logo_small"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView8"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/imageView8"
         android:layout_width="30dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
-    <ImageView
+<!--    <ImageView
         android:layout_width="30dp"
         android:layout_height="0dp"
         android:layout_marginEnd="10dp"
@@ -31,6 +31,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_person_pin_24" />
+        app:srcCompat="@drawable/ic_baseline_person_pin_24" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
